# kursovaya

./: README.md  pyproject.toml  render.yaml  requirements.txt  setup.py  start.sh
app/: __init__.py  auth.py  crud.py  database.py  dependencies.py  main.py  models.py  rss_parser.py  schemas.py  start_app.py
app/parser/: __init__.py  rss_parser.py
