[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newshub"
version = "1.0.0"
description = "News Aggregator API"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.28",
    "pydantic==2.5.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "aiohttp==3.9.3",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.0",
    "feedparser==6.0.11",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
newshub = "app.main:run"