[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newshub"
version = "1.0.0"
description = "News Aggregator API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==1.10.13",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "aiohttp==3.9.1",
    "aiosqlite==0.19.0",
    "python-dotenv==1.0.0",
    "feedparser==6.0.10",
    "alembic==1.12.0",
]

[tool.setuptools]
packages = ["app"]